--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>HTML Academy: Pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/grunticon.loader.js"></script>
 </head>
 <body>
 <div class="page-wrap">
@@ -23,17 +24,17 @@
         </div>
       </div>
     </div>
-<!--         <div class="col-md-8"> -->
-          <div class="page-header__nav-wrap">
-            <nav class="main-nav">
-              <ul>
-                <li class="active"><a href="#">Информация</a></li>
-                <li><a href="javascript:void(0);">Возможности</a></li>
-                <li><a href="javascript:void(0);">Отзывы</a></li>
-                <li><a href="javascript:void(0);">Стоимость</a></li>
-              </ul>
-            </nav>
-          </div>
+
+    <div class="page-header__nav-wrap">
+      <nav class="main-nav">
+        <ul>
+          <li class="active"><a href="#">Информация</a></li>
+          <li><a href="javascript:void(0);">Возможности</a></li>
+          <li><a href="javascript:void(0);">Отзывы</a></li>
+          <li><a href="javascript:void(0);">Стоимость</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <div class="intro">
@@ -171,16 +172,13 @@
                   <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
                 </tr>
                 <tr>
-                  <td>Розовый фильтр</td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
+                  <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
                 </tr>
                 <tr>
-                  <td>Смайлики</td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
+                  <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
                 </tr>
                 <tr>
-                  <td>Комментарии</td>
-                  <td><span class="check"><i>нет</i></span></td>
+                  <td>Комментарии <span class="check"><i>нет</i></span></td>
                 </tr>
               </table>
             </div>
