--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="page-wrap">
   <header class="page-header">
-    <div class="container">
+    <div class="page-header__container">
       <div class="row">
         <div class="col-md-4">
           <h1 class="logo">
@@ -40,10 +40,10 @@
   <div class="intro">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-sm-4">
           <div class="intro__container">
             <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
-            <div class="intro__desc">
+            <!-- <div class="intro__desc">
               <a class="btn" href="javascript:void(0);">Скачать приложение</a>
               <ul class="intro__apps-list">
                 <li><img src="img/icon--apple.png" alt="Apple"></li>
@@ -51,7 +51,22 @@
                 <li><img src="img/icon--windows.png" alt="Windows"></li>
               </ul>
               <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
-            </div>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="intro__desc">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <a class="btn" href="javascript:void(0);">Скачать приложение</a>
+            <ul class="intro__apps-list">
+              <li><img src="img/icon--apple.png" alt="Apple"></li>
+              <li><img src="img/icon--android.png" alt="Android"></li>
+              <li><img src="img/icon--windows.png" alt="Windows"></li>
+            </ul>
+            <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
           </div>
         </div>
       </div>
@@ -244,6 +259,47 @@
             </div>
           </div>
         </div>
+
+<!--       <div class="slider">
+          <input type="radio" id="btn-1" name="toggle" checked>
+          <input type="radio" id="btn-2" name="toggle">
+          <input type="radio" id="btn-3" name="toggle">
+        <div class="slider-controls">
+          <label for="btn-1"></label>
+          <label for="btn-2"></label>
+          <label for="btn-3"></label>
+        </div>
+        <div class="slider-inner">
+          <div class="slider-slides">
+            <div class="slider__slide slide--first">
+              <table class="price-table">
+                <tr><th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th></tr>
+                <tr><td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td></tr>
+                <tr><td>Смайлики <span class="check"><i class="checked">есть</i></span></td></tr>
+                <tr><td>Комментарии <span class="check"><i>нет</i></span></td></tr>
+              </table>
+            </div>
+            <div class="slider__slide slide--second">
+              <table class="price-table">
+                <tr><th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th></tr>
+                <tr><td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td></tr>
+                <tr><td>Смайлики <span class="check"><i class="checked">есть</i></span></td></tr>
+                <tr><td>Комментарии <span class="check"><i>нет</i></span></td></tr>
+              </table>
+            </div>
+            <div class="slider__slide slide--third">
+              <table class="price-table">
+                <tr><th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th></tr>
+                <tr><td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td></tr>
+                <tr><td>Смайлики <span class="check"><i class="checked">есть</i></span></td></tr>
+                <tr><td>Комментарии <span class="check"><i>нет</i></span></td></tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div> -->
+
+
       </div>
     </main>
 
