--- a/index.html
+++ b/index.html
@@ -38,23 +38,25 @@
   </header>
 
   <div class="intro">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="intro__container">
-            <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
-            <!-- <div class="intro__desc">
-              <a class="btn" href="javascript:void(0);">Скачать приложение</a>
-              <ul class="intro__apps-list">
-                <li><img src="img/icon--apple.png" alt="Apple"></li>
-                <li><img src="img/icon--android.png" alt="Android"></li>
-                <li><img src="img/icon--windows.png" alt="Windows"></li>
-              </ul>
-              <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
-            </div> -->
+    <div class="intro__bg-img">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="intro__container">
+              <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
+              <!-- <div class="intro__desc">
+                <a class="btn" href="javascript:void(0);">Скачать приложение</a>
+                <ul class="intro__apps-list">
+                  <li><img src="img/icon--apple.png" alt="Apple"></li>
+                  <li><img src="img/icon--android.png" alt="Android"></li>
+                  <li><img src="img/icon--windows.png" alt="Windows"></li>
+                </ul>
+                <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
+              </div> -->
+            </div>
           </div>
         </div>
-      </div>
+    </div>
     </div>
     <div class="intro__desc">
       <div class="container">
