--- a/index.html
+++ b/index.html
@@ -22,22 +22,21 @@
           </h1>
           <a class="nav-toggle  js-nav-toggle" title="Меню"><span>Меню</span></a>
         </div>
+        <div class="page-header__nav-wrap">
+          <nav class="main-nav">
+            <ul>
+              <li class="active"><a href="#">Информация</a></li>
+              <li><a href="javascript:void(0);">Возможности</a></li>
+              <li><a href="javascript:void(0);">Отзывы</a></li>
+              <li><a href="javascript:void(0);">Стоимость</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
-    </div>
-
-    <div class="page-header__nav-wrap">
-      <nav class="main-nav">
-        <ul>
-          <li class="active"><a href="#">Информация</a></li>
-          <li><a href="javascript:void(0);">Возможности</a></li>
-          <li><a href="javascript:void(0);">Отзывы</a></li>
-          <li><a href="javascript:void(0);">Стоимость</a></li>
-        </ul>
-      </nav>
-    </div>
+    </header>
   </header>
 
-  <div class="intro">
+<!--   <div class="intro">
     <div class="intro__bg-img">
       <div class="container">
         <div class="row">
@@ -46,13 +45,43 @@
               <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
             </div>
           </div>
+
         </div>
-    </div>
+      </div>
     </div>
     <div class="intro__desc">
       <div class="container">
         <div class="row">
           <div class="col-sm-5">
+            <a class="btn" href="javascript:void(0);">Скачать приложение</a>
+            <ul class="intro__apps-list">
+              <li><img src="img/icon--apple.png" alt="Apple"></li>
+              <li><img src="img/icon--android.png" alt="Android"></li>
+              <li><img src="img/icon--windows.png" alt="Windows"></li>
+            </ul>
+            <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="intro">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5">
+          <div class="intro__container">
+              <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
+          </div>
+        </div>
+        <div class="col-sm-7">
+          <div class="intro__bg-img">
+            hand with tel
+            <img src="img/bg__intro--hand.png" height="313" width="320" alt="">
+          </div>
+        </div>
+        <div class="col-sm-5">
+          <div class="intro__desc">
             <a class="btn" href="javascript:void(0);">Скачать приложение</a>
             <ul class="intro__apps-list">
               <li><img src="img/icon--apple.png" alt="Apple"></li>
@@ -252,47 +281,6 @@
             </div>
           </div>
         </div>
-
-<!--       <div class="slider">
-          <input type="radio" id="btn-1" name="toggle" checked>
-          <input type="radio" id="btn-2" name="toggle">
-          <input type="radio" id="btn-3" name="toggle">
-        <div class="slider-controls">
-          <label for="btn-1"></label>
-          <label for="btn-2"></label>
-          <label for="btn-3"></label>
-        </div>
-        <div class="slider-inner">
-          <div class="slider-slides">
-            <div class="slider__slide slide--first">
-              <table class="price-table">
-                <tr><th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th></tr>
-                <tr><td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td></tr>
-                <tr><td>Смайлики <span class="check"><i class="checked">есть</i></span></td></tr>
-                <tr><td>Комментарии <span class="check"><i>нет</i></span></td></tr>
-              </table>
-            </div>
-            <div class="slider__slide slide--second">
-              <table class="price-table">
-                <tr><th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th></tr>
-                <tr><td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td></tr>
-                <tr><td>Смайлики <span class="check"><i class="checked">есть</i></span></td></tr>
-                <tr><td>Комментарии <span class="check"><i>нет</i></span></td></tr>
-              </table>
-            </div>
-            <div class="slider__slide slide--third">
-              <table class="price-table">
-                <tr><th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th></tr>
-                <tr><td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td></tr>
-                <tr><td>Смайлики <span class="check"><i class="checked">есть</i></span></td></tr>
-                <tr><td>Комментарии <span class="check"><i>нет</i></span></td></tr>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-
       </div>
     </main>
 
