--- a/grid.html
+++ b/grid.html
@@ -9,30 +9,92 @@
   <script src="js/grunticon.loader.js"></script>
   <style>
     .col {
-      padding: 5px 0;
-      background: #ccc;
+      padding: 1px 5px;
+      background: #000;
       margin: 2px 0;
+      box-sizing: border-box;
+    }
+    .col span {
+      width: 100%;
+      display: block;
+      background: #ccc;
+      box-sizing: border-box;
     }
   </style>
 </head>
 <body>
 
 <div class="page-wrap">
-  <div class="container">
+<!--   <div class="container">
     <div class="row">
       <div class="col col-sm-6 col-md-3">
-        1
+        <span>1</span>
       </div>
       <div class="col col-sm-6 col-md-3">
-        2
+        <span>2</span>
       </div>
       <div class="col col-sm-6 col-md-3">
-        3
+        <span>3</span>
       </div>
       <div class="col col-sm-6 col-md-3">
-        4
+        <span>4</span>
       </div>
     </div>
+  </div> -->
+
+  <div class="container">
+    <div class="row">
+      <div class="col col-sm-4">
+        <span>1 header logo</span>
+      </div>
+      <div class="col col-sm-8">
+        <span>1 header menu</span>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col-sm-5">
+        <span>2 intro 1</span>
+      </div>
+      <div class="col col-sm-7">
+        <span>2 intro 2</span>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class"col col-sm-12"><span>3 caption</span></div>
+    </div>
+
+    <div class="row">
+      <div class="col col-sm-6 col-md-12">
+      
+        <div class="container">
+
+          <div class="row">
+            <div class="col col-sm-6 col-md-4">
+              <div class="features__item">
+                      <strong class="features__caption">Поднимает настроение</strong>
+                      <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+                    </div>
+            </div>
+            <div class="col col-sm-6 col-md-4">
+            <div class="features__item">
+                      <strong class="features__caption">Поднимает настроение</strong>
+                      <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+                    </div>
+            </div>
+            <div class="col col-sm-6 col-md-4">
+              <div class="features__item">
+                      <strong class="features__caption">Поднимает настроение</strong>
+                      <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+                    </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
 </div>
