--- a/index.html
+++ b/index.html
@@ -36,60 +36,18 @@
     </header>
   </header>
 
-<!--   <div class="intro">
-    <div class="intro__bg-img">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-5">
-            <div class="intro__container">
-              <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="intro__desc">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-5">
-            <a class="btn" href="javascript:void(0);">Скачать приложение</a>
-            <ul class="intro__apps-list">
-              <li><img src="img/icon--apple.png" alt="Apple"></li>
-              <li><img src="img/icon--android.png" alt="Android"></li>
-              <li><img src="img/icon--windows.png" alt="Windows"></li>
-            </ul>
-            <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
   <div class="intro">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-5">
-          <div class="intro__container">
-              <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
-          </div>
-        </div>
-        <div class="col-sm-7">
-          <div class="intro__bg-img">
-            hand with tel
-            <img src="img/bg__intro--hand.png" height="313" width="320" alt="">
-          </div>
-        </div>
-        <div class="col-sm-5">
-          <div class="intro__desc">
-            <a class="btn" href="javascript:void(0);">Скачать приложение</a>
-            <ul class="intro__apps-list">
-              <li><img src="img/icon--apple.png" alt="Apple"></li>
-              <li><img src="img/icon--android.png" alt="Android"></li>
-              <li><img src="img/icon--windows.png" alt="Windows"></li>
-            </ul>
-            <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
-          </div>
+    <div class="intro__container">
+      <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
+      <div class="intro-desc">
+        <div class="intro-desc__container">
+          <a class="btn btn--fixed" href="javascript:void(0);">Скачать приложение</a>
+          <ul class="intro-desc__apps-list">
+            <li><img src="img/icon--apple.png" alt="Apple"></li>
+            <li><img src="img/icon--android.png" alt="Android"></li>
+            <li><img src="img/icon--windows.png" alt="Windows"></li>
+          </ul>
+          <p>Доступно для iPhone, iPad, Android, <br>Windows phone, Mac OS, Windows 8</p>
         </div>
       </div>
     </div>
@@ -98,13 +56,9 @@
     <main class="page-main">
       <div class="box">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="box__container">
-                <div class="page-caption">Устали от серости мегаполиса?</div>
-                <div class="page-caption">Нам есть, что вам предложить!</div>
-              </div>
-            </div>
+          <div class="box__container">
+            <div class="page-caption">Устали от серости мегаполиса?</div>
+            <div class="page-caption">Нам есть, что вам предложить!</div>
           </div>
         </div>
       </div>
@@ -166,35 +120,31 @@
 
       <div class="box">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="box__container">
-                <div class="slider slider--reviews">
-                  <div class="active">
-                    <blockquote class="reviews">
-                      <cite class="reviews__author">Николай Петров</cite>
-                      <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-                    </blockquote>
-                  </div>
-                  <!-- <div>
-                    <blockquote class="reviews">
-                      <cite class="reviews__author">Николай Петров</cite>
-                      <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-                    </blockquote>
-                  </div>
-                  <div>
-                    <blockquote class="reviews">
-                      <cite class="reviews__author">Николай Петров</cite>
-                      <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-                    </blockquote>
-                  </div> -->
-                </div>
-                <div class="slider__pagination">
-                  <i class="active"></i>
-                  <i></i>
-                  <i></i>
-                </div>
+          <div class="box__container">
+            <div class="slider slider--reviews">
+              <div class="active"> 
+                <blockquote class="reviews">
+                  <cite class="reviews__author">Николай Петров</cite>
+                  <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                </blockquote>
+              </div> 
+<!--                   <div>
+                <blockquote class="reviews">
+                  <cite class="reviews__author">Николай Петров</cite>
+                  <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                </blockquote>
               </div>
+              <div>
+                <blockquote class="reviews">
+                  <cite class="reviews__author">Николай Петров</cite>
+                  <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                </blockquote>
+              </div>  -->
+             </div>
+            <div class="slider__pagination">
+              <i class="active"></i>
+              <i></i>
+              <i></i>
             </div>
           </div>
         </div>
@@ -202,7 +152,7 @@
 
       <div class="box box--shear">
         <div class="box__container">
-          <div class="slider slider--price visible-xs">
+          <!-- <div class="slider slider--price visible-xs">
             <div class="slide active">
               <table class="price-table">
                 <tr>
@@ -219,25 +169,6 @@
                 </tr>
               </table>
             </div>
-            <!-- <div class="slide">
-              <table class="price-table">
-                <tr>
-                  <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
-                </tr>
-                <tr>
-                  <td>Розовый фильтр</td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Смайлики</td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Комментарии</td>
-                  <td><span class="check"><i>нет</i></span></td>
-                </tr>
-              </table>
-            </div> -->
           </div>
           <div class="slider__pagination visible-xs">
             <i></i>
@@ -245,40 +176,102 @@
             <i></i>
           </div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12 hidden-xs">
-              <table class="price-table price-table--big">
-                <col width="25%">
-                <col width="25%">
-                <col width="25%">
-                <col width="25%">
+ -->
+      <div class="slider visible-xs">
+        <input type="radio" id="btn-1" name="toggle" checked>
+        <input type="radio" id="btn-2" name="toggle">
+        <input type="radio" id="btn-3" name="toggle">
+        <div class="slider-controls">
+          <label for="btn-1"></label>
+          <label for="btn-2"></label>
+          <label for="btn-3"></label>
+        </div>
+        <div class="slider-inner">
+          <div class="slider-slides">
+            <div class="slider__slide slide--first">
+              <table class="price-table">
                 <tr>
-                  <th class="price-table__caption--null"></th>
-                  <th class="price-table__caption">База<span>1,99 USD</span></th>
-                  <th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
-                  <th class="price-table__caption">Анлим <span>9,99 USD</span></th>
+                  <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
                 </tr>
                 <tr>
-                  <td>Розовый фильтр</td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
+                  <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
                 </tr>
                 <tr>
-                  <td>Смайлики</td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
-                  <td><span class="check"><i>нет</i></span></td>
-                  <td><span class="check"><i>нет</i></span></td>
+                  <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
                 </tr>
                 <tr>
-                  <td>Комментарии</td>
-                  <td><span class="check"><i class="checked">есть</i></span></td>
-                  <td><span class="check"><i>нет</i></span></td>
-                  <td><span class="check"><i>нет</i></span></td>
+                  <td>Комментарии <span class="check"><i>нет</i></span></td>
                 </tr>
               </table>
             </div>
+            <div class="slider__slide slide--second">
+              <table class="price-table">
+                <tr>
+                  <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                </tr>
+                <tr>
+                  <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
+                </tr>
+                <tr>
+                  <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
+                </tr>
+                <tr>
+                  <td>Комментарии <span class="check"><i>нет</i></span></td>
+                </tr>
+              </table>
+            </div>
+            <div class="slider__slide slide--third">
+              <table class="price-table">
+                <tr>
+                  <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                </tr>
+                <tr>
+                  <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
+                </tr>
+                <tr>
+                  <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
+                </tr>
+                <tr>
+                  <td>Комментарии <span class="check"><i>нет</i></span></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+
+        <div class="container">
+          <div class="hidden-xs">
+            <table class="price-table price-table--big">
+              <col width="25%">
+              <col width="25%">
+              <col width="25%">
+              <col width="25%">
+              <tr>
+                <th class="price-table__caption--null"></th>
+                <th class="price-table__caption">База<span>1,99 USD</span></th>
+                <th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                <th class="price-table__caption">Анлим <span>9,99 USD</span></th>
+              </tr>
+              <tr>
+                <td>Розовый фильтр</td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+              </tr>
+              <tr>
+                <td>Смайлики</td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+                <td><span class="check"><i>нет</i></span></td>
+                <td><span class="check"><i>нет</i></span></td>
+              </tr>
+              <tr>
+                <td>Комментарии</td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+                <td><span class="check"><i>нет</i></span></td>
+                <td><span class="check"><i>нет</i></span></td>
+              </tr>
+            </table>
           </div>
         </div>
       </div>
@@ -290,9 +283,7 @@
           <div class="row">
             <div class="box__container">
               <div class="contacts">
-                <div class="col-lg-12">
-                  <h2 class="contacts__caption">Остались вопросы? <br>Свяжитесь с нами!</h2>
-                </div>
+                <h2 class="contacts__caption">Остались вопросы? <br>Свяжитесь с нами!</h2>
                 <div class="col-sm-6 col-md-4">
                   <dl class="contacts__list">
                     <dt>Звоните:</dt>
